CICO-40236 Corrected localization values for Cendyn

--- a/admin/partials/interfaces/Cendyn/adCendynSetup.html
+++ b/admin/partials/interfaces/Cendyn/adCendynSetup.html
@@ -1,5 +1,5 @@
 <ad-common-parts-in-form-dir on-save-button-click="saveInterfaceConfig"
-                             header-caption="{{'REVINATE_SETUP_HEADER'|translate}}">
+                             header-caption="{{'CENDYN_SETUP_HEADER'|translate}}">
     <div class="entry full-width">
         <label><span translate>ACTIVATE_INACTIVATE</span></label>
         <div name="active-inactive-toggle" class="switch-button single" ng-class="{ on: config.enabled }"
@@ -10,7 +10,7 @@
     </div>
 
     <div class="form-title full-width">
-        <h3><span translate>REVINATE_SUB_TITLE</span></h3>
+        <h3><span translate>CENDYN_SUB_TITLE</span></h3>
     </div>
 
     <fieldset class="holder left">
