--- a/stylesheets/less/app/screens/03.search.less
+++ b/stylesheets/less/app/screens/03.search.less
@@ -750,6 +750,8 @@
                     }
 
                     &.in-card {
+                        position: relative;
+
                         .data {
                             margin-right: 20px;
                             .calc-width(45, 148); 
@@ -768,10 +770,10 @@
 
                         .prepaid,
                         .switch-button {
-                            margin-right: 20px;
+                            position: absolute;
+                            top: 15px;
+                            right: 120px;
                             visibility: visible;
-                            #fade > .in();
-                            .pull-left;
                             .size(40px, 150px);
                         }
 
@@ -818,11 +820,13 @@
                         }
 
                         .checkbox {
+                            position: absolute;
+                            top: 15px;
+                            right: 62px;
                             padding: 0;
                             margin: 0;
                             .square(40px);
                             .hide-text();
-                            .pull-left;
 
                             input { .square(40px); }
 
