--- a/rover/partials/companyCard/rvCompanyCardCommissions.html
+++ b/rover/partials/companyCard/rvCompanyCardCommissions.html
@@ -105,11 +105,9 @@
         <div id="travel-agent-commision-list" class="scrollable" ng-class="{ 'print-selected' : (filterData.selectAll || selectedCommissions.length > 0 || prePaidCommissions.length > 0)}" ng-iscroll="commission-list" >
             <ul class="search-results wrapper">
                 <li class="reservation commision in-card" ng-repeat="commissionDetail in commissionDetails" ng-class="{'selected' : (filterData.selectAll || commissionDetail.is_checked)}">
-                    <!-- Clicking L32 block should open Stay Card for this reservation -->
-                    <div class="faux-anchor has-arrow next-view" ng-click="goToStayCard(commissionDetail.reservation_id, commissionDetail.reservation_no)">
-                        <!-- Add class "selected" when selecting all/individual commisions. -->
 
-                     <div class="switch-button" ng-class="{'on': commissionDetail.commission_data.paid_status === 'Paid','overlay' : !hasPermissionToEditPaid()}" ng-show="commissionDetail.commission_data.paid_status == 'Paid' || commissionDetail.commission_data.paid_status == 'Unpaid'"> <!-- add class "on" when L22 checked -->
+
+                    <div class="switch-button" ng-class="{'on': commissionDetail.commission_data.paid_status === 'Paid','overlay' : !hasPermissionToEditPaid()}" ng-show="commissionDetail.commission_data.paid_status == 'Paid' || commissionDetail.commission_data.paid_status == 'Unpaid'">
                         <input value="" type="checkbox" ng-click="togglePaidStatus(commissionDetail)"/>
                         <label class="data-off">
                             <span class="value" translate>COMMISSION_UNPAID</span>
@@ -123,15 +121,15 @@
                     <!-- If prepaid, replace L22-L32 with this:
                     <div class="prepaid">Prepaid</div> -->
                     <div class="prepaid" ng-show="commissionDetail.commission_data.paid_status == 'Prepaid'" translate>COMMISSION_PREPAID</div>
-                        <div class="prepaid" ng-show="isEmptyObject(commissionDetail.commission_data)" translate></div>
+                    <div class="prepaid" ng-show="isEmptyObject(commissionDetail.commission_data)" translate></div>
                     <label class="checkbox inline" ng-class="{'checked' : commissionDetail.is_checked}" >
-                            <!-- add class "checked" when L56 checked -->
-                            <span class="icon-form icon-checkbox" ng-class="{'checked' : commissionDetail.is_checked}"></span>
-                            <!-- add class "checked" when L56 checked -->
-                            <input ng-model="commissionDetail.is_checked" type="checkbox" ng-click="onCheckBoxSelection(commissionDetail)" />
+                        <!-- add class "checked" when L56 checked -->
+                        <span class="icon-form icon-checkbox" ng-class="{'checked' : commissionDetail.is_checked}"></span>
+                        <!-- add class "checked" when L56 checked -->
+                        <input ng-model="commissionDetail.is_checked" type="checkbox" ng-click="onCheckBoxSelection(commissionDetail)" />
                     </label>
                     <!-- Clicking L40 block should open Stay Card for this reservation -->
-                    <div class="faux-anchor has-arrow next-view">
+                    <div class="faux-anchor has-arrow next-view" ng-click="goToStayCard(commissionDetail.reservation_id, commissionDetail.reservation_no)">
                         <div class="data">
                             <h2>{{commissionDetail.guest_name}}</h2>
                             <span class="confirmation">{{commissionDetail.reservation_no}}</span>
