CICO-38728 Updated api call with guest_payment_method_id

--- a/rover/partials/reservationCard/rvReservationCardPayment.html
+++ b/rover/partials/reservationCard/rvReservationCardPayment.html
@@ -20,7 +20,7 @@
 			<figure class="card-logo">
 				<img ng-src="/assets/{{reservationData.reservation_card.payment_details.card_type_image}}" alt="">
 			</figure>
-			<span class="number"> {{ 'ENDING_WITH' | translate }} - {{reservationData.reservation_card.payment_details.id}}
+			<span class="number"> {{ 'ENDING_WITH' | translate }}
 				<span id="token-last-value" class="value number"> {{reservationData.reservation_card.payment_details.card_number}} </span>
 			</span>
 			<span class="date"> {{ 'DATE' | translate }}
