--- a/rover/partials/companyCard/rvCompanyCardCommissions.html
+++ b/rover/partials/companyCard/rvCompanyCardCommissions.html
@@ -55,14 +55,12 @@
                     <div class="switch-button" ng-class="{'on': filterData.toggleCommission}">
                         <input id="recalculate-commission" value="" type="checkbox" ng-click="toggleCommission()"> 
                         <label class="data-off"> 
-                            
                             <span class="switch-icon">%</span>
-                            <span class="value">$</span>  
+                            <span class="value">{{ currencySymbol }}</span>  
                         </label> 
                         <label class="data-on"> 
-                            
                             <span class="value">%</span> 
-                            <span class="switch-icon">$</span> 
+                            <span class="switch-icon">{{ currencySymbol }}</span> 
                         </label> 
                     </div> 
                 </div>
