CICO-40524 public v2 theme updates

--- a/zest_station/css/themes/public_v2/theme.less
+++ b/zest_station/css/themes/public_v2/theme.less
@@ -69,6 +69,17 @@
 		}
 	}
 
+	.add_remove, .make-key-now{
+	    background: white !important;
+	    color: black !important;
+	    border-style: solid !important;
+	    border-width: 1px !important;
+	    border-radius: 0em !important;
+	}
+	.add_remove_main {
+		padding-top:8% !important;
+	}
+
 	#actions{
 		button{
 		    background: @white !important;
