CICO-40524 public updates icons and buttons to match design

--- a/zest_station/css/themes/public_v2/theme.less
+++ b/zest_station/css/themes/public_v2/theme.less
@@ -138,6 +138,21 @@
 	.hideSvg{
 		display:none;
 	}
+	.option {    
+		border-radius: 0px !important;
+	    width: 125px !important;
+	    height: 125px !important;
+	}
+	.done-btn, .add-remove-btn, .idle-timeout-btn, .make-key-btn {
+		background: @white !important;
+	    color: black !important;
+	    border-style: solid !important;
+	    border-width: 1px !important;
+	    border-radius: 0em !important;
+	    &.selected {
+	    	border-color:@white;
+	    }
+	}
 	#public {
 
 		h1,
