CICO-40524 hotel admin cleanup and adds preview for key create in progress image

--- a/admin/css/admin_ng.css.less
+++ b/admin/css/admin_ng.css.less
@@ -1413,6 +1413,12 @@ div.move-all-icons{
 .station-language-entry>div{
   width: 45.75% !important; 
 }
+.station-image-preview{
+  position: absolute;
+  margin-top: 15px;
+  max-width: 425px;
+  max-height: 245px;
+}
 
 /* ============/
 Help-tip can be used to add tips in our admin areas which are not clear to users, since most areas are configured once and forgotten 
