CICO-40524 public v2 theme update

--- a/zest_station/css/themes/public_v2/theme.less
+++ b/zest_station/css/themes/public_v2/theme.less
@@ -138,11 +138,18 @@
 	.hideSvg{
 		display:none;
 	}
+	span,text,button,header{
+		font-weight:lighter;
+	}
 	.option {    
 		border-radius: 0px !important;
 	    width: 125px !important;
 	    height: 125px !important;
 	}
+	.lighter-text {
+		opacity: .4;
+	}
+
 	.done-btn, .add-remove-btn, .idle-timeout-btn, .make-key-btn {
 		background: @white !important;
 	    color: black !important;
